Fix spacing between title and sections
This commits removes complex selectors and also removes the use of
padding/min-height to be able to use the margin merge.

All items are seperated by 2rem. Title gets an extra 2rem top margin,
for a total of 4rem between a section and a title. Of course, the first
title only gets the required amount of margin to be able to have a 2rem
gap.

Empty elements get 1rem of top margin. Next empty element will get 0
bottom margin, to keep a 1rem space between empty elements.

Re #2698
Re https://github.com/symphonycms/symphony-2/pull/2698#issuecomment-309451014

--- a/symphony/assets/css/src/symphony.associations.css
+++ b/symphony/assets/css/src/symphony.associations.css
@@ -17,25 +17,25 @@
 #drawer-section-associations .association-title {
 	font-size: 1.4rem;
 	font-weight: 400;
-	padding: 2rem 0 0;
+	padding: 0;
+	margin: 4rem 0 2rem;
+}
+
+#drawer-section-associations .association-title:first-child {
+	margin-top: 1.5rem; /* content has 0.5 so it's visually 2rem */
 }
 
 .association {
-	min-height: 3rem;
-	margin: 0.5rem 0 1rem;
+	margin: 2rem 0;
 	color: #666;
 }
 
-.association + .association {
-	margin-top: 1.5rem;
+.empty {
+	margin-bottom: 1rem;
 }
 
 .empty + .empty {
 	margin-top: 0;
-}
-
-.association:last-of-type {
-	padding-bottom: 1rem;
 }
 
 .association a {
@@ -46,16 +46,12 @@
 	color: #323232;
 }
 
-.association:first-of-type header {
-	padding-top: 0.6rem;
-}
-
 .association header {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-	padding-top: 1rem;
+	padding-top: 0;
 }
 
 .association header > p {
